switch z-index to 9999994 to fix odd dialog bug.  Issue #40

--- a/spectrum.css
+++ b/spectrum.css
@@ -12,7 +12,8 @@ License: MIT
     display:inline-block;
     *display: inline;
     *zoom: 1;
-    z-index: 2147483647;
+    /* https://github.com/bgrins/spectrum/issues/40 */
+    z-index: 9999994;
     overflow: hidden;
 }
 .sp-container.sp-flat {
